CREATE TABLE categoria(
    id BIGSERIAL PRIMARY KEY NOT NULL,
    uuid UUID NOT NULL,
    created_at TIMESTAMP NOT NULL,
    nome VARCHAR(255) NOT NULL UNIQUE
);
