CREATE TABLE pais(
    id BIGSERIAL PRIMARY KEY NOT NULL,
    uuid UUID NOT NULL,
    created_at TIMESTAMP NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    uf VARCHAR(2) NOT NULL
);

CREATE TABLE estado(
    id BIGSERIAL PRIMARY KEY NOT NULL,
    uuid UUID NOT NULL,
    created_at TIMESTAMP NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    uf VARCHAR(2) NOT NULL,
    pais_id BIGINT NOT NULL REFERENCES pais(id)
);
