@startuml

class Autor {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string nome
	-string email
	-string descricao
}

class Categoria {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string nome
}

class Livro {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string titulo
	-string resumo
	-string sumario
	-double preco
	-string isbn
	-int numeroPaginas
	-LocalDateTime dataPublicacao
}

Livro *-- Categoria
Livro *-- Autor

class Pais {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string nome
	-string uf
}

class Estado {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string nome
	-string uf
}

Estado *-- Pais

class Compra {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string email
	-string nome
	-string documento
	-string endereco
	-string complemento
	-string cidade
	-string telefone
	-string cep
}

Compra *-- Pais
Compra *-- Estado

class carrinho {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-BigDecimal total
}

class ItemCarrinho {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-int quantidade
}

carrinho *-- ItemCarrinho

ItemCarrinho *-- Livro

class Cupom {
	-int id
	-string uuid
	-LocalDateTime createdAt
	-string codigo
	-double desconto
	-LocalDateTime validade
}


class PagementoCupom {

}

@enduml
